Fix window sizing and positioning on Windows

The feature to make windows remember their sizes and positions across
screen layouts relied on calling QScreen::name() to identify screens.
Unfortunately this function returns garbage on Windows; see
https://bugreports.qt.io/browse/QTBUG-74317

So on Windows, let's identify displays by serial number as a workaround.

BUG: 429943
FIXED-IN: 5.78